Style color palette button and Fix chart visibility error

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -7,7 +7,7 @@
   background-color: $White;
 
   & .title {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
 }
 .wrap {
