--- a/src/styles/chartList.scss
+++ b/src/styles/chartList.scss
@@ -10,4 +10,32 @@
     height:10px;
     border-radius: 50%;
   }
+
+  /* y_axis */
+  & .y_axis{
+    text-align:center;
+    display:flex;
+    justify-content: space-around;
+    align-items:center;
+    font-size:0.7rem;
+
+    & .y_axis_check{
+      display: flex;
+      align-items: center;
+
+      & > input{
+        margin-right:5px;
+      }
+    }
+  }
+
+  /* color_change */
+  & .color_change{
+    color:$Mint;
+    cursor:pointer;
+
+    &:hover{
+      opacity:0.7;
+    }
+  }
 }
